# sombok

./: .gitignore  .gitmodules  ChangeLog  INSTALL  INSTALL.ja_JP  Makefile.am  Makefile.in  NEWS  README  README.ja_JP  TODO  UNICODE  VERSION  config.guess  config.h.in  config.sub  configure  configure.ac  sombok.spec.in
data/: EastAsianWidth-5.1.0.custom  EastAsianWidth-5.2.0.custom  EastAsianWidth-6.0.0.custom  EastAsianWidth-6.1.0beta.custom  EastAsianWidth-6.2.0.custom  EastAsianWidth-6.3.0.custom  EastAsianWidth-7.0.0.custom  EastAsianWidth-8.0.0.custom  GraphemeBreakProperty-5.1.0.custom  GraphemeBreakProperty-5.2.0.custom  GraphemeBreakProperty-6.0.0.custom  GraphemeBreakProperty-6.1.0.custom  GraphemeBreakProperty-6.2.0beta.custom  GraphemeBreakProperty-6.3.0beta.custom  GraphemeBreakProperty-7.0.0beta.custom  GraphemeBreakProperty-8.0.0.custom  LBCLASSES  Rules-6.0.0.txt  Rules-6.1.0.txt  Rules-6.1.0beta.txt  Rules-6.2.0beta.txt  Rules-6.3.0beta.txt  Rules-8.0.0.txt  constants.pl  custom.pl  data.pl  makefile
debian/: README  changelog  control  copyright  libsombok-dev.doc-base  libsombok-dev.links  rules  sombok-dev.doc-base  watch
doc/: doxyfile.in
include/: sombok.h  sombok.h.in  sombok_constants.h
lib/: 5.1.0.c  5.2.0.c  6.0.0.c  6.1.0.c  6.1.0beta.c  6.2.0.c  6.2.0beta.c  6.3.0.c  6.3.0beta.c  7.0.0.c  7.0.0beta.c  8.0.0.c  break.c  charprop.c  gcstring.c  linebreak.c  southeastasian.c  utf8.c  utils.c
sombok/: ChangeLog  Makefile.am  Makefile.in  README  README.ja_JP  aclocal.m4  config.h.in  config.sub  configure  configure.ac  sombok.pc.in  sombok.spec.in
sombok/data/: LBCLASSES  Rules-6.1.0beta.txt  data.pl  makefile
sombok/debian/: README  changelog  control  docs  libsombok-dev.doc-base  libsombok-dev.install  rules
sombok/doc/: doxyfile.in
sombok/include/: sombok.h  sombok.h.in
sombok/lib/: 6.0.0.c  break.c  charprop.c  gcstring.c  linebreak.c  southeastasian.c  utils.c
sombok/src/: mymalloc.c  mymalloc.h  sombok.c
sombok/tests/: 01break.t  02hangul.t  03ns.t  06context.t  09uri.t  11format.t  14sea_al.t  lb.sh
src/: mymalloc.c  mymalloc.h  sombok.c  strcasecmp.c  strerror.c
tests/: 01break.t  02hangul.t  03ns.t  05urgent.t  06context.t  07sea.t  11format.t  lb.sh
